# week03/eternal-registry-api/src/models/users.js
@@ -1,4 +1,5 @@
-const { Schema,mongoose } = require('mongoose');
+const { Schema } = require('mongoose');
+const bcrypt = require("bcryptjs");
 
 const userSchema = new Schema({
     firstName: {
@@ -18,6 +19,21 @@ const userSchema = new Schema({
         required: true,
     }
 });
+
+userSchema.pre('save', async function(next) {
+    if (!this.isModified('password')) return next();
+
+    try{
+        this.password = await bcrypt.hashSync(this.password, 10);
+    } catch (err){
+        next(err);
+    }
+});
+
+userSchema.methods.comparePassword = async function (newPassword) {
+    return await bcrypt.compare(newPassword, this.password);
+}
+
 module.exports = (mongoose) => {
     const User = mongoose.model('User',userSchema);
     return User;
